[gd_scene load_steps=15 format=3 uid="uid://dpirsfefp0hu3"]

[ext_resource type="Script" uid="uid://dia83m22q2u4f" path="res://addons/polygon2d_tool/editor_interface/inspector_panel.gd" id="1_c1r8c"]
[ext_resource type="PackedScene" uid="uid://djtt2db3jk3ob" path="res://addons/polygon2d_tool/editor_interface/inspector_setting.tscn" id="2_olcuk"]
[ext_resource type="Script" uid="uid://bl4x3pamvmaag" path="res://addons/polygon2d_tool/editor_interface/arity.gd" id="3_hr0kh"]

[sub_resource type="FontVariation" id="FontVariation_frw4r"]
spacing_top = -6
spacing_bottom = -3

[sub_resource type="Theme" id="Theme_vljuo"]
Button/fonts/font = SubResource("FontVariation_frw4r")
HBoxContainer/constants/separation = 0
VBoxContainer/constants/separation = 0

[sub_resource type="Resource" id="Resource_qaxcf"]
script = ExtResource("3_hr0kh")
prefix = "x"
max_value = 16384.0
step = 0.1
default_value = 64.0

[sub_resource type="Resource" id="Resource_c68i2"]
script = ExtResource("3_hr0kh")
prefix = "y"
max_value = 16384.0
step = 0.1
default_value = 64.0

[sub_resource type="Resource" id="Resource_g5qcs"]
script = ExtResource("3_hr0kh")
min_value = 3.0
max_value = 128.0
default_value = 32.0

[sub_resource type="Resource" id="Resource_8eqte"]
script = ExtResource("3_hr0kh")
min_value = 3.0
max_value = 128.0
default_value = 16.0

[sub_resource type="Resource" id="Resource_qk53v"]
script = ExtResource("3_hr0kh")
step = 0.1
default_value = 100.0

[sub_resource type="Resource" id="Resource_olcuk"]
script = ExtResource("3_hr0kh")
step = 0.1
default_value = 100.0

[sub_resource type="Resource" id="Resource_pa0cj"]
script = ExtResource("3_hr0kh")
suffix = "°"
max_value = 360.0
step = 0.1

[sub_resource type="Resource" id="Resource_tspvm"]
script = ExtResource("3_hr0kh")
suffix = "°"
max_value = 360.0
step = 0.1
default_value = 360.0

[sub_resource type="Resource" id="Resource_bvrq5"]
script = ExtResource("3_hr0kh")
step = 0.1

[node name="Polygon2DTool" type="PanelContainer"]
offset_right = 462.0
offset_bottom = 393.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource("Theme_vljuo")
script = ExtResource("1_c1r8c")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 2
horizontal_scroll_mode = 0

[node name="MarginContainer" type="MarginContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ToolButtons" type="HBoxContainer" parent="ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Update" type="Button" parent="ScrollContainer/MarginContainer/VBoxContainer/ToolButtons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Update"

[node name="Copy" type="Button" parent="ScrollContainer/MarginContainer/VBoxContainer/ToolButtons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Copy"

[node name="Paste" type="Button" parent="ScrollContainer/MarginContainer/VBoxContainer/ToolButtons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Paste"

[node name="HSeparator" type="HSeparator" parent="ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Size" parent="ScrollContainer/MarginContainer/VBoxContainer" instance=ExtResource("2_olcuk")]
layout_mode = 2
text = "Size"
arity = Array[ExtResource("3_hr0kh")]([SubResource("Resource_qaxcf"), SubResource("Resource_c68i2")])

[node name="OuterSides" parent="ScrollContainer/MarginContainer/VBoxContainer" instance=ExtResource("2_olcuk")]
layout_mode = 2
text = "Outer sides"
arity = Array[ExtResource("3_hr0kh")]([SubResource("Resource_g5qcs")])

[node name="InterSides" parent="ScrollContainer/MarginContainer/VBoxContainer" instance=ExtResource("2_olcuk")]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "Inter sides"
arity = Array[ExtResource("3_hr0kh")]([SubResource("Resource_8eqte")])

[node name="OuterRatio" parent="ScrollContainer/MarginContainer/VBoxContainer" instance=ExtResource("2_olcuk")]
layout_mode = 2
text = "Outer ratio"
arity = Array[ExtResource("3_hr0kh")]([SubResource("Resource_qk53v")])

[node name="InterRatio" parent="ScrollContainer/MarginContainer/VBoxContainer" instance=ExtResource("2_olcuk")]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "Inter ratio"
arity = Array[ExtResource("3_hr0kh")]([SubResource("Resource_olcuk")])

[node name="HSeparator2" type="HSeparator" parent="ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Rotate" parent="ScrollContainer/MarginContainer/VBoxContainer" instance=ExtResource("2_olcuk")]
layout_mode = 2
text = "Rotate"
arity = Array[ExtResource("3_hr0kh")]([SubResource("Resource_pa0cj")])

[node name="AngleDegrees" parent="ScrollContainer/MarginContainer/VBoxContainer" instance=ExtResource("2_olcuk")]
layout_mode = 2
text = "Angle degrees"
arity = Array[ExtResource("3_hr0kh")]([SubResource("Resource_tspvm")])

[node name="HSeparator3" type="HSeparator" parent="ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="InternalMargin" parent="ScrollContainer/MarginContainer/VBoxContainer" instance=ExtResource("2_olcuk")]
unique_name_in_owner = true
layout_mode = 2
text = "Internal margin"
arity = Array[ExtResource("3_hr0kh")]([SubResource("Resource_bvrq5")])

[node name="CustomInter" type="CheckButton" parent="ScrollContainer/MarginContainer/VBoxContainer/InternalMargin"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4

[connection signal="pressed" from="ScrollContainer/MarginContainer/VBoxContainer/ToolButtons/Update" to="." method="_on_update_pressed"]
[connection signal="pressed" from="ScrollContainer/MarginContainer/VBoxContainer/ToolButtons/Copy" to="." method="_on_copy_pressed"]
[connection signal="pressed" from="ScrollContainer/MarginContainer/VBoxContainer/ToolButtons/Paste" to="." method="_on_paste_pressed"]
[connection signal="value_changed" from="ScrollContainer/MarginContainer/VBoxContainer/Size" to="." method="_on_size_value_changed"]
[connection signal="value_changed" from="ScrollContainer/MarginContainer/VBoxContainer/OuterSides" to="." method="_on_outer_sides_value_changed"]
[connection signal="value_changed" from="ScrollContainer/MarginContainer/VBoxContainer/InterSides" to="." method="_on_inter_sides_value_changed"]
[connection signal="value_changed" from="ScrollContainer/MarginContainer/VBoxContainer/OuterRatio" to="." method="_on_outer_ratio_value_changed"]
[connection signal="value_changed" from="ScrollContainer/MarginContainer/VBoxContainer/InterRatio" to="." method="_on_inter_ratio_value_changed"]
[connection signal="value_changed" from="ScrollContainer/MarginContainer/VBoxContainer/Rotate" to="." method="_on_rotate_value_changed"]
[connection signal="value_changed" from="ScrollContainer/MarginContainer/VBoxContainer/AngleDegrees" to="." method="_on_angle_degrees_value_changed"]
[connection signal="value_changed" from="ScrollContainer/MarginContainer/VBoxContainer/InternalMargin" to="." method="_on_internal_margin_value_changed"]
[connection signal="toggled" from="ScrollContainer/MarginContainer/VBoxContainer/InternalMargin/CustomInter" to="." method="_on_custom_inter_toggled"]
